# WvXY-Utils

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
ApollonianGasket/: ag_demo.gh
Nurbs/: nurbs.ipynb  nurbs.py
OpenGL_Utils/: CMakeLists.txt  gl_utils.cpp  gl_utils.hpp  main.cpp
OpenGL_Utils/GoVer/: golang_demo.go
OpenGL_Utils/glad/include/glad/: glad.h
OpenGL_Utils/glad/src/: glad.c
OpenGL_Utils/shaders/: simple_shader.frag  simple_shader.vert
demos/ApollonianGasket/: ag4gh.py
demos/stellar_movement/: CMakeLists.txt  main.cpp  stellar.h
matplotlib/: util_plt.py
meshIO/: CMakeLists.txt  data_io.cpp  data_io.hpp  data_io_test.cpp
modernGL/: demo_2D.py
openGL/: CMakeLists.txt  demo_legacy.cpp  demo_modern.cpp  gl_utils.cpp  gl_utils.hpp  main.cpp
openGL/GoVer/: go.mod
openGL/shaders/: simple_shader.vert
openGL_template/: CMakeLists.txt  golang_demo.go
